--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../full-stack/part3/phonebook/ && npm run build && cp -r build ../../../full-stack-part3/",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/hyyris/full-stack-part3#readme",
   "devDependencies": {
+    "eslint": "^8.19.0",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
